--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,28 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  position: relative;
+}
+
+.gallery-item {
+  position: relative;
+}
+.gallery-item .overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  padding: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.gallery-item:hover .overlay {
+  opacity: 1;
 }
 
 .gallery img {
